[gd_scene load_steps=3 format=3 uid="uid://bjht3natywdf6"]

[ext_resource type="Script" uid="uid://mapjiirjukju" path="res://scripts/main_menu.gd" id="1_ekxnf"]
[ext_resource type="PackedScene" uid="uid://b84htt7kdl5w6" path="res://scenes/menu_item.tscn" id="1_l6cm7"]

[node name="MainMenu" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ekxnf")

[node name="PlaylistsMenuItem" parent="." instance=ExtResource("1_l6cm7")]
layout_mode = 2
text = "Playlists"

[node name="TutorialMenuItem" parent="." instance=ExtResource("1_l6cm7")]
layout_mode = 2
text = "Tutorial"

[node name="AboutMenuItem" parent="." instance=ExtResource("1_l6cm7")]
layout_mode = 2
text = "About"

[connection signal="pressed" from="PlaylistsMenuItem" to="." method="_on_playlists_menu_item_pressed"]
[connection signal="pressed" from="TutorialMenuItem" to="." method="_on_tutorial_menu_item_pressed"]
[connection signal="pressed" from="AboutMenuItem" to="." method="_on_about_menu_item_pressed"]
